src/index.scss
@font-face {
  font-family: "astrospace";
  src: local("AstroSpace"),
    url("./assets/fonts/AstroSpace.ttf") format("truetype");
  font-weight: normal;
}

a {
  text-decoration: none;
}

.spaceFont {
  font-family: 'astrospace' !important;
}

.background {
  height: 100%;
  background: radial-gradient(ellipse at bottom, #1B2735 0%, #000000 100%);
  overflow: hidden;
  height: 100vh;
  width: 100vw;
}

.main {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 100%;
}

.backgroundEffects {
  position: absolute;
  z-index: 0;

  @function multiple-box-shadow ($n) {
    $value: '#{random(2000)}px #{random(2000)}px #FFF';
    @for $i from 2 through $n {
      $value: '#{$value} , #{random(2000)}px #{random(2000)}px #FFF';
    }
  
    @return unquote($value)
  }
  
  $shadows-small:  multiple-box-shadow(400);
  $shadows-medium: multiple-box-shadow(50);
  
  .stars { 
    width: 1px;
    height: 1px;
    background: transparent;
    box-shadow: $shadows-small;
    animation: animStar 150s linear infinite;
    
    &:after {
      content: " ";
      position: absolute;
      top: 2000px;
      width: 1px;
      height: 1px;
      background: transparent;
      box-shadow: $shadows-small;
    }
  }

  .stars2 {
    width: 2px;
    height: 2px;
    background: transparent;
    box-shadow: $shadows-medium;
    animation: animStar 200s linear infinite;
      
    &:after {
      content: " ";
      position: absolute;
      top: 2000px;
      width: 2px;
      height: 2px;
      background: transparent;
      box-shadow: $shadows-medium;
    }
  }

  @keyframes animStar {
    from {	
      transform: translateY(0px);
    } 
    to {
      transform: translateY(-2000px);
    }		
  }
}

